<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Testing App"
        android:layout_margin="20dp"
        android:textSize="20sp" />

    <android.support.design.widget.TextInputLayout
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/etFirst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter first no" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/etSecond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter second no" />
    </android.support.design.widget.TextInputLayout>
    <Button
        android:layout_margin="20dp"
        android:id="@+id/btnSum"
        android:text="Sum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:layout_margin="20dp"
        android:id="@+id/btnSubtract"
        android:text="Subtract"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:layout_margin="20dp"
        android:id="@+id/btnDivide"
        android:text="Divide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>


